installs.

Added a wait-and-check to the stop option in the weewx.debian rc script.

Fixed bug in the Vantage driver that causes below sea-level altitudes 
to be read as a large positive number.

Fixed bug in wmr100 driver that causes gust wind direction to be null.

Fixed bug in wmr200 driver that causes gust wind direction to be null.

Fixed ultimeter driver to ensure wind direction is None when no wind speed.

Fixed bug in calculation of inDewpoint.

Assign default units for extraHumid3,4,5,6,7, extraTemp4,5,6,7, leafTemp3,4,
and leafWet1,2.

Use StdWXCalculate to ensure that wind direction is None if no wind speed.


3.0.1 12/07/14

Fixed bug in setup.py that would forget to insert device-specific options
in weewx.conf during new installations.


3.0.0 12/04/14

Big update with lots of changes and lots of new features. The overall
goal was to make it easier to write and install extensions. Adding
custom databases, units, accumulators and many other little things
have been made easier.

Skins and skin.conf continue to be 100% backwards compatible (since
V1.5!).  However, search-list extensions will have to be rewritten.
Details in the Upgrading Guide.

Previously, configuration options for all possible devices were
included in the configuration file, weewx.conf. Now, for new installs,
it has been slimmed down to the minimum and, instead, configuration
options are added on an "as needed" basis, using a new setup.py option
"configure".

Your configuration file, weewx.conf should be automatically updated to
V3 by the upgrade process, using your previously chosen hardware. But,
check it over. Not sure we got everything correct. See the Upgrading
Guide.

Specific changes follow.

Total rewrite of how data gets bound to a database. You now specify a
"data binding" to indicate where data should be going, and where it is
coming from. The default binding is "wx_binding," the weather binding,
so most users will not have to change a thing.
 